--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <meta content='business' name='audience'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <link href='http://fpaw.yanot.org' rel='canonical'>
+    <link href='http://manifest.github.io/fastprot-analyzer-frontend' rel='canonical'>
     <link href='https://plus.google.com/112726837250790706995' rel='author'>
     <link href='https://plus.google.com/101810801003845460090' rel='publisher'>
     <link href='css/bootstrap.min.css' media='screen' rel='stylesheet' type='text/css'>
