changed footer text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         <div class='text-center'>
           All services provided are "as is" with no express or implied warranty for accuracy or accessibility.
           <br>
-          Built on top of&nbsp;<a href='https://github.com/manifest/fastprot-analyzer-backend'>Fast Protocol Analyzer Service</a>&#x2e;
+          <a href='https://github.com/manifest/fastprot-analyzer-frontend'>Fast Protocol Analyzer Web</a>
+          is free and open source project.
           Developed by&nbsp;<a href='mailto:ae.nesterov@gmail.com'>Andrei Nesterov</a>&nbsp;&copy; 2013.
         </div>
       </div>
